2002-10-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=91535
	* gnome-settings-sound.c : as michael points out it is silly to start
	  the daemon just so that we can stop it.  Dunno much about esound
	  code so the funky logic is left untouched.

2002-10-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=95179
	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : do nothing here.
	(gnome_settings_accessibility_keyboard_load) : install the filter
	  here, _after_ loading the gconf settings.
	(set_gconf_from_server) : check to see if anything has actually
	  changed before sending off the changeset.

2002-09-24  Jody Goldber <jody@gnome.org>

	* Release 2.0.2.91

2002-09-11  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  set the timeout options fully.

2002-09-10  Jody Goldberg <jody@gnome.org>

	* gnome-settings-wm.c (gnome_settings_wm_load) : protect against NULL.

2002-09-09  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=91223
	* gnome-settings-wm.c (gnome_settings_wm_load) : add some valdation to
	ensure that we don't set the number of workspaces to 0
	(which pisses off kde).  Also apply fcrozat's patch to restore the
	names.

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  the feature beep is not related the the feature timeout.

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.0.1.1

2002-08-15  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=90778
	* gnome-settings-accessibility-keyboard.c (set_gconf_from_server) :
	  Add a heuristic so that we do not disable features in gconf just
	  because they are disabled in the X server.  If the master switch is
	  already disabled in gconf we can guess that most of the time it
	  means that people want to keep their flags.

2002-08-14  Jody Goldberg <jody@gnome.org>
